--- a/static/css/index.css
+++ b/static/css/index.css
@@ -19,3 +19,28 @@
 {
     border-radius: 50%;
 }
+
+.nav
+{
+    height: 25px;
+    width: 100%;
+    background-color: #161a22;
+    color: #fff;
+}
+
+.nav-right
+{
+    height: 25px;
+    line-height: 25px;
+    position: absolute;
+    right: 10px;
+    top: 0px;
+    color: #fff;
+    font-family: lato, sans-serif;
+}
+
+.nav-right>a
+{
+    text-decoration: none;
+    color: #fff;
+}
