--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,7 @@
         <div class="overlay hidden" id="overlay"></div>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/login.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/nav.js') }}"></script>
         {% block scripts %}
         {% endblock %}
     </body>
