--- a/src/templates/components/nav.component.html
+++ b/src/templates/components/nav.component.html
@@ -5,7 +5,7 @@
             <div class="main-nav">
                 <a href="/" class="nav-item">Home</a>
                 <a href="/posts" class="nav-item">Posts</a>
-                <a href="/categories" class="nav-item">Categories</a>
+                <!-- <a href="/categories" class="nav-item">Categories</a> -->
             </div>
         </div>
         <div class="right-nav">
