--- a/src/templates/posts/post_short.component.html
+++ b/src/templates/posts/post_short.component.html
@@ -1,6 +1,6 @@
 <div class="post-short">
     <div class="post-header">
-        <h3 class="post-title">{{ post.title }}</h3><span>, <a href="" class="post-author">{{ post.author.name }}</a></span><br/>
+        <a href="{{ url_for('main.show_post', post_id=post.id) }}"><h3 class="post-title">{{ post.title }}</h3></a><span>, <a href="" class="post-author">{{ post.author.name }}</a></span><br/>
         <span class="post-dates">{{ post.date_created }}</span>
         <div class="post-categories">{% for category in post.categories %}<span class="category">{{ category.name }}</span>{% endfor %}</div>
     </div>
